[workspace]
members = [
  "tools/port_scanner",
  "tools/packet-match-fuzz",
  "tools/discord_audit_bot",
  "research/crypto",
  "research/merkle",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["sumin-world"]

# 공통으로 쓸 의존성 있으면 여기 선언 가능
#[workspace.dependencies]
#proptest = "1"
