[package]
name = "rust-kernel-features"
version = "0.1.0"
edition = "2021"
authors = ["sumin-world <your-email@example.com>"]
description = "Learning Rust features for Linux kernel development"
repository = "https://github.com/sumin-world/rust-kernel-features-study"
license = "MIT"

[dependencies]
# 기본적인 의존성만 포함
pin-project = "1.1"

[dev-dependencies]

[[example]]
name = "field_projection"
path = "src/examples/field_projection.rs"

[[example]]
name = "inplace_init"
path = "src/examples/inplace_init.rs"

[[example]]
name = "smart_pointers"
path = "src/examples/smart_pointers.rs"

[[example]]
name = "limitations"
path = "src/examples/limitations.rs"
