[package]
name = "discord_audit_bot"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
serenity = { version = "0.12", default-features = false, features = [
  "client", "gateway", "model", "cache", "rustls_backend"
] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
