[package]
name = "discord_audit_bot"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
serenity   = { version = "0.12", features = ["client", "gateway", "rustls_backend", "model"] }
chrono     = { version = "0.4", features = ["serde"] }
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv     = "0.15"
tokio      = { version = "1", features = ["full"] }
once_cell  = "1"
