[package]
name = "discord_audit_bot"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Discord server security audit bot"

[dependencies]
serenity   = { version = "0.12", features = ["client", "gateway", "rustls_backend", "model"] }
chrono.workspace = true
serde.workspace = true
serde_json = "1.0"
dotenv     = "0.15"
tokio.workspace = true
once_cell  = "1"
