[package]
name = "wifi_audit"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Passive Wi-Fi auditing tool (authorized networks only)"
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
chrono.workspace = true
pcap = "1"
comfy-table = "7"
macaddr = "1"
